@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    - ->batch method for grouping items into arrayrefs
 
 1.001     2019-04-15 05:44:47+08:00 Asia/Kuala_Lumpur
     New features:
